Corrected left alignment for central headline & search on mobile view

--- a/app/assets/stylesheets/home/_front-page.scss
+++ b/app/assets/stylesheets/home/_front-page.scss
@@ -2,6 +2,8 @@
   background-color: $color-orange;
   padding-bottom: 45px;
   margin-bottom: 0;
+  padding-left: 15px;
+  padding-right: 15px;
 
   @media (min-width: $screen-xs-min) {
     padding-top: 45px;
@@ -23,6 +25,7 @@
     margin-top: 0;
     max-width: 8em;
     color: #fff;
+    // padding-left: 15px;
 
     @media (min-width: 30em) {
       max-width: 11em;
@@ -35,6 +38,7 @@
 
   .banner-action {
     max-width: 27em;
+    // padding-left: 15px;
 
     @media (min-width: 35em) {
       margin: 2em 0 0;
